--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
         <header>
             <div class="navbar">
+                <img class="logo" src="./img/logo.PNG" alt="greenfield org logo">
                     <a class="active" href="#home">Home</a>
                     <a href="#projects">Projects</a>
                     <a href="#team">Team</a>
