playing with css grid and styling for home page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             </div>
         </header>
 
+        <div class="container">
+            <div class="Photo">
+                <img src="https://images.unsplash.com/photo-1481349518771-20055b2a7b24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1239&q=80">
+            </div>
+            <div class="Text">
+                <h1>Building software solutions to fit your needs</h1>
+                <p>We are a team of Software Engineers and Web Developers who will work with you to solve your companies needs regardless of the technology.</p>
+            </div>
+          </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
