--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 
         <div class="container">
             <div class="Photo">
-                <img src="https://images.unsplash.com/photo-1481349518771-20055b2a7b24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1239&q=80">
+                <img src="img/homepage.PNG">
             </div>
             <div class="Text">
                 <h1>Building software solutions to fit your needs</h1>
                 <p>We are a team of Software Engineers and Web Developers who will work with you to solve your companies needs regardless of the technology.</p>
+                <button class="button">Contact us for a quote</button>
             </div>
           </div>
         <!--[if lt IE 7]>
