turning nav logo into link for home

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="navbar">
-                <img class="logo" src="./img/logo.PNG" alt="greenfield org logo">
+                <a href="#home"><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"></a>
                     <a class="active" href="#home">Home</a>
                     <a href="#projects">Projects</a>
                     <a href="#team">Team</a>
