creating new div to float right nav links

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
         <header>
             <div class="navbar">
                 <a href="#home"><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"></a>
+                <div class="floatright">
                     <a class="active" href="#home">Home</a>
                     <a href="#projects">Projects</a>
                     <a href="#team">Team</a>
                     <a href="#contact">Contact</a>
+                </div>
             </div>
         </header>
 
-        <div class="container">
+        <div class="container" id="home">
             <div class="Photo">
-                <img src="img/homepage.PNG">
+                <img class="homeimage" src="img/homepage.PNG">
             </div>
             <div class="Text">
                 <h1>Building software solutions to fit your needs</h1>
