--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <div class="Text">
                 <h1>Building software solutions to fit your needs</h1>
                 <p>We are a team of Software Engineers and Web Developers who will work with you to solve your companies needs regardless of the technology.</p>
-                <button class="button">Contact us for a quote</button>
+                <button class="button" href="#contact">Contact us for a quote</button>
             </div>
           </div>
+          <div id="#contact"> lalalalal</div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
