--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <!-- footer -->
+        <footer class="footer">Made with ❤ by Greenfield Development - Copyright &copy; <script>document.write(new Date().getFullYear())</script></footer>
         <script src="" async defer></script>
     </body>
 </html>
