--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                     <a href="#contact">Contact</a>
             </div>
         </header>
+        <!-- about page -->
+        <div id="#about">
 
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
