adding in about div

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
                     <a href="#contact">Contact</a>
             </div>
         </header>
+
         <!-- about page -->
         <div id="#about">
-
+            <div class="aboutpg">
+                <div class="webdev"></div>
+                <div class="photo1"></div>
+                <div class="photo2"></div>
+                <div class="webapp"></div>
+                <div class="mobiledev"></div>
+                <div class="photo3"></div>
+              </div>
         </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
