--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <button class="button" href="#contact">Contact us for a quote</button>
             </div>
           </div>
-          <div id="#contact"> lalalalal</div>
+          <div id="contact">
+              <button class="contactbtn" href="#">Contact Us</button>
+          </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
