styling title and plant svg

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </header>
-
+        <!-- HOME -->
         <div class="container" id="home">
             <div class="Photo">
                 <img class="homeimage" src="img/homepage.PNG">
@@ -35,6 +35,15 @@
                 <button class="button" href="#contact">Contact us for a quote</button>
             </div>
           </div>
+
+         <!-- TEAM -->
+         <div id="team">
+            <div class="teamtop">
+                <h1>The Team</h1>
+                <img class="smplant" src="./img/smplant.svg">
+            </div>
+
+         </div> 
           <div id="#contact"> lalalalal</div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
