changing team page to grid

--- a/index.html
+++ b/index.html
@@ -38,13 +38,23 @@
 
          <!-- TEAM -->
          <div id="team">
-            <div class="teamtop">
-                <h1>The Team</h1>
-                <img class="smplant" src="./img/smplant.svg">
-            </div>
+            <div class="aboutpg">
+                <div class="The-Team">
+                    <h1>the Team</h1>
+                    <img src="./img/smplant.svg" class="smplant">
+                </div>
+                <div class="Dan">
+                    <h2>Daniel</h2>
+                    <button class="button" href="#">View Portfolio</button>
+                </div>
+                <div class="Hanna">
+                    <h2>Hanna</h2>
+                    <button class="button" href="#">View Portfolio</button>
+                </div>
+              </div>
 
          </div> 
-          <div id="#contact"> lalalalal</div>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
