--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
                     <img src="./img/smplant.svg" class="smplant">
                 </div>
                 <div class="Dan">
+                    <div class="svgcont">
+                        <img src="./img/danpic.svg">
+                    </div>
                     <h2>Daniel</h2>
                     <button class="button" href="#">View Portfolio</button>
                 </div>
                 <div class="Hanna">
+                    <img src="./img/hannapic.svg">
                     <h2>Hanna</h2>
                     <button class="button" href="#">View Portfolio</button>
                 </div>
