layering hanna svg images

--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
                     <img src="./img/smplant.svg" class="smplant">
                 </div>
                 <div class="Dan">
-                    <div class="svgcont">
+                    <div class="svgcontd">
                         <img src="./img/danpic.svg">
                     </div>
                     <h2>Daniel</h2>
                     <button class="button" href="#">View Portfolio</button>
                 </div>
                 <div class="Hanna">
-                    <img src="./img/hannapic.svg">
+                    <div class="svgconth">
+                        <img src="./img/hannapic.svg">
+                    </div>
                     <h2>Hanna</h2>
                     <button class="button" href="#">View Portfolio</button>
                 </div>
