adding in bottom svgs

--- a/index.html
+++ b/index.html
@@ -48,16 +48,20 @@
                         <img src="./img/danpic.svg">
                     </div>
                     <h2>Daniel</h2>
-                    <button class="button" href="#">View Portfolio</button>
+                    <button class="aboutbtn" href="#">View Portfolio</button>
                 </div>
                 <div class="Hanna">
                     <div class="svgconth">
                         <img src="./img/hannapic.svg">
                     </div>
                     <h2>Hanna</h2>
-                    <button class="button" href="#">View Portfolio</button>
+                    <button class="aboutbtn" href="#">View Portfolio</button>
                 </div>
-              </div>
+                <div class="teambottom">
+                    <img src="./img/lgplant.svg">
+                    <img src="./img/emptydesk.svg" class="emptydesk">
+                </div>
+            </div>
 
          </div> 
 
