styling bottom svgs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button class="aboutbtn" href="#">View Portfolio</button>
                 </div>
                 <div class="teambottom">
-                    <img src="./img/lgplant.svg">
+                    <img class="teamplant" src="./img/lgplant.svg">
                     <img src="./img/emptydesk.svg" class="emptydesk">
                 </div>
             </div>
