adding initial grid to dev page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                 <button class="button" href="#contact">Contact us for a quote</button>
             </div>
           </div>
+
+         <!-- DEV PAGE -->
+         <div class="devpage">
+            <div class="webdev"></div>
+            <div class="webapp"></div>
+            <div class="mobiledev"></div>
+          </div>
+           
           <div id="#contact"> lalalalal</div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
