working on website dev grid

--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
 
          <!-- DEV PAGE -->
          <div class="devpage">
-            <div class="webdev"></div>
+            <img class="topgreen" src="./img/topgreen.svg">
+            <div class="webdev">
+                <div class="webdevwords">
+                    <h2>Website Development</h2>
+                    <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
+                </div>
+            </div>
             <div class="webapp"></div>
             <div class="mobiledev"></div>
           </div>
-           
+
           <div id="#contact"> lalalalal</div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
