--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
          <!-- DEV PAGE -->
          <div class="devpage">
-            <img class="topgreen" src="./img/topgreen.svg">
             <div class="webdev">
+                <img class="greenwebdev" src="./img/webdevgreen.svg">
                 <div class="webdevwords">
                     <h2>Website Development</h2>
                     <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
