adding more grid rows and adding in top/bot svg

--- a/index.html
+++ b/index.html
@@ -38,15 +38,20 @@
 
          <!-- DEV PAGE -->
          <div class="devpage">
+             <div class="devtop">
+             </div>
             <div class="webdev">
                 <img class="greenwebdev" src="./img/webdevgreen.svg">
                 <div class="webdevwords">
                     <h2>Website Development</h2>
                     <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
                 </div>
+                <img class="webdevimg" src="./img/webdev.svg">
             </div>
             <div class="webapp"></div>
             <div class="mobiledev"></div>
+            <div class="devbot">
+            </div>
           </div>
 
           <div id="#contact"> lalalalal</div>
