working on web app section styling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
                 </div>
                 <img class="webdevimg" src="./img/webdev.svg">
             </div>
-            <div class="webapp"></div>
+            <div class="webapp">
+                <img src="./img/webapp.svg">
+                <img class="greenwebapp"src="./img/webappgreen.svg">
+                <div class="webappwords">
+                    <h2>Web Applications</h2>
+                    <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
+                </div>
+            </div>
             <div class="mobiledev"></div>
             <div class="devbot">
             </div>
