adding img to dev top instead of using bg image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          <!-- DEV PAGE -->
          <div class="devpage">
              <div class="devtop">
+                 <img class="topgreen" src="./img/topgreen.svg">
              </div>
             <div class="webdev">
                 <img class="greenwebdev" src="./img/webdevgreen.svg">
