--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <h2>Website Development</h2>
                     <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
                 </div>
-                <img class="webdevimg" src="./img/webdev.svg">
+                <div class="photo1"><img class="webdevimg" src="./img/webdev.svg">
+                </div>
             </div>
             <div class="webapp">
                 <img src="./img/webapp.svg">
@@ -62,7 +63,7 @@
                 <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 <img src="./img/mobile.svg">
             </div>
-            <div class="devbot">
+            <div class="devbot"><img src="./img/botgreen.svg"></div>
             </div>
           </div>
          <!-- TEAM -->
