styling bottom and top green

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 </div>
             </div>
-            <div class="mobiledev">
+            <div class="mobile">
                 <img src="./img/mobilegreen.svg">
                 <h2>Mobile Development</h2>
                 <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 <img src="./img/mobile.svg">
             </div>
-            <div class="devbot"><img src="./img/botgreen.svg"></div>
+            <div class="devbot"><img class="botgreen" src="./img/botgreen.svg"></div>
             </div>
           </div>
          <!-- TEAM -->
