changing view portfolio buttons to links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="./img/hannapic.svg">
                     </div>
                     <h2>Hanna</h2>
-                    <button class="aboutbtn" href="#">View Portfolio</button>
+                    <a class="aboutbtn" target="_blank" href="https://hannamlittlefield.github.io/">View Portfolio</a>
                 </div>
                 <div class="teambottom">
                     <img class="teamplant" src="./img/lgplant.svg">
