--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="./img/danpic.svg">
                     </div>
                     <h2>Daniel</h2>
-                    <button class="aboutbtn" href="#">View Portfolio</button>
+                    <a class="aboutbtn" target="_blank" href="#">View Portfolio</a>
                 </div>
                 <div class="Hanna">
                     <div class="svgconth">
