--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.svg">
     </head>
     <body>
         <header>
