adding unstyled images to grid

--- a/index.html
+++ b/index.html
@@ -43,12 +43,24 @@
             <div class="webdev">
                 <img src="./img/webdevgreen.svg">
             </div>
-            <div class="webphoto"></div>
-            <div class="appphoto"></div>
-            <div class="webapp"></div>
-            <div class="mobiledev"></div>
-            <div class="mobilephoto"></div>
-            <div class="devbot"></div>
+            <div class="webphoto">
+                <img src="./img/webdev.svg">
+            </div>
+            <div class="appphoto">
+                <img src="./img/webapp.svg">
+            </div>
+            <div class="webapp">
+                <img src="./img/webappgreen.svg">
+            </div>
+            <div class="mobiledev">
+                <img src="./img/mobilegreen.svg">
+            </div>
+            <div class="mobilephoto">
+                <img src="./img/mobile.svg">
+            </div>
+            <div class="devbot">
+                <img class="botgreen" src="./img/botgreen.svg">
+            </div>
           </div>
 
 
