styling webdev section

--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                 <img class="topgreen" src="./img/topgreen.svg">
             </div>
             <div class="webdev">
-                <img src="./img/webdevgreen.svg">
+                <img class="greenwebdev" src="./img/webdevgreen.svg">
+                <div class="webdevwords">
+                    <h2>Website Development</h2>
+                        <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
+                    </div>
             </div>
             <div class="webphoto">
-                <img src="./img/webdev.svg">
+                <img class="webdevimg" src="./img/webdev.svg">
             </div>
             <div class="appphoto">
                 <img src="./img/webapp.svg">
