styling dev page

--- a/index.html
+++ b/index.html
@@ -48,19 +48,27 @@
                     </div>
             </div>
             <div class="webphoto">
-                <img class="webdevimg" src="./img/webdev.svg">
+                <img class="devimg" src="./img/webdev.svg">
             </div>
             <div class="appphoto">
-                <img src="./img/webapp.svg">
+                <img class="devimg" src="./img/webapp.svg">
             </div>
             <div class="webapp">
                 <img src="./img/webappgreen.svg">
+                <div class="webappwords">
+                    <h2>Website Development</h2>
+                        <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
+                </div>
             </div>
             <div class="mobiledev">
                 <img src="./img/mobilegreen.svg">
+                <div class="mobilewords">
+                    <h2>Mobile Development</h2>
+                    <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
+                </div>
             </div>
             <div class="mobilephoto">
-                <img src="./img/mobile.svg">
+                <img class="devimg" src="./img/mobile.svg">
             </div>
             <div class="devbot">
                 <img class="botgreen" src="./img/botgreen.svg">
