reverting to original bc codepen doesnt work

--- a/index.html
+++ b/index.html
@@ -105,29 +105,7 @@
         </div>
           <div id="contact">
             <div>
-                <!-- code pen-->
-                <div class="container">
-
-                    <div class="half">
-                      <div class="cta-container">
-                        <div class="cta-text">
-                          <h2>Contact Us</h2>
-                          <div class="arrow"><svg xmlns="http://www.w3.org/2000/svg" id="arrow"  viewBox="0 0 24 24">
-                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
-                    </svg></div>
-                          <form action="mailto:development.gf@gmail.com"class="form-container">
-                            <label>Name<input type="text" /></label>
-                            <label>Email<input type="text" /></label>
-                            <label>Title<input type="text" /></label>
-                            <label>Message<input type="text" /></label>
-                            <input type="submit" value="Send" class="submit"/>
-                          </form>
-                        </div>
-                      </div>
-                    </div>
-                      </div>
-
-                <!-- end code pen-->
+                <button class="contactbtn" href="#">Contact Us</button>
                 <div class="contactimg">
                     <img src="./img/coffee.svg">
                     <img src="/img/pplsitting.svg">
