adding is active toggle function to button

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                 </div>
             </div>
           </div>
+          <script>$('.contactbtn').click(function(){
+            $('contactbtn').toggleClass('is-active');
+          });</script>
 
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
