--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
           <div id="contact">
             <div>
-                <a role="button" class="contactbtn" href="#">Contact Us</a>
+                <h1>Contact Us</h1>
                     <div class="contactform">
                         <form action="mailto:development.gf@gmail.com">
                             <label for="name">Name</label><br>
@@ -116,7 +116,7 @@
                             <input type="text" id="title" name="title"><br>
                             <label for="message">Message</label><br>
                             <input type="text" id="message" name="message"><br>
-                            <button type="submit" value="Submit">Send</button>
+                            <button class="submit" type="submit" value="Submit">Send</button>
                         </form>
                     </div>
                 <div class="contactimg">
