--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <label for="Title">Title</label><br>
                             <input type="text" id="title" name="title"><br>
                             <label for="message">Message</label><br>
-                            <input type="text" id="message" name="message"><br>
+                            <input type="textarea" id="message" name="message"><br>
                             <button class="submit" type="submit" value="Submit">Send</button>
                         </form>
                     </div>
