pulled the larger svgs out of the html and added them to the svg, cleaned up the css

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
          <!-- DEV PAGE -->
          <div class="devpage">
-            <div class="devtop">
-                <img class="topgreen" src="./img/topgreen.svg">
-            </div>
+            <div class="devtop"></div>
             <div class="webdev">
                 <img class="greenwebdev" src="./img/webdevgreen.svg">
                 <div class="webdevwords">
@@ -72,9 +70,7 @@
             <div class="mobilephoto">
                 <img class="devimg" src="./img/mobile.svg">
             </div>
-            <div class="devbot">
-                <img class="botgreen" src="./img/botgreen.svg">
-            </div>
+            <div class="devbot"></div>
           </div>
          <!-- TEAM -->
          <div id="team">
