--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="./img/favicon.svg">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
+      <script>
+          function reveal() {
+            var reveals = document.querySelectorAll(".reveal");
+
+            for (var i = 0; i < reveals.length; i++) {
+                var windowHeight = window.innerHeight;
+                var elementTop = reveals[i].getBoundingClientRect().top;
+                var elementVisible = 150;
+
+                if (elementTop < windowHeight - elementVisible) {
+                reveals[i].classList.add("active");
+                } else {
+                reveals[i].classList.remove("active");
+                }
+            }
+            }
+
+            window.addEventListener("scroll", reveal);
+      </script>
     </head>
     <body>
         <header>
@@ -43,7 +66,7 @@
                 <img class="topgreen" src="./img/topgreen.svg">
             </div>
             <div class="webdev">
-                <img class="greenwebdev" src="./img/webdevgreen.svg">
+                <img class="greenwebdev reveal fade-left" src="./img/webdevgreen.svg">
                 <div class="webdevwords">
                     <h2>Website Development</h2>
                         <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
