--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                 <img class="devimg" src="./img/webapp.svg">
             </div>
             <div class="webapp">
-                <img src="./img/webappgreen.svg">
+                <img class="reveal fade-right"src="./img/webappgreen.svg">
                 <div class="webappwords">
                     <h2>Website Applications</h2>
                         <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 </div>
             </div>
             <div class="mobiledev">
-                <img class="mobilegreen" src="./img/mobilegreen.svg">
+                <img class="mobilegreen reveal fade-left" src="./img/mobilegreen.svg">
                 <div class="mobilewords">
                     <h2>Mobile Development</h2>
                     <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
