adding fade in to text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="webdev">
                 <img class="greenwebdev reveal fade-left" src="./img/webdevgreen.svg">
-                <div class="webdevwords">
+                <div class="webdevwords reveal fade-left">
                     <h2>Website Development</h2>
                         <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
                     </div>
@@ -80,14 +80,14 @@
             </div>
             <div class="webapp">
                 <img class="reveal fade-right"src="./img/webappgreen.svg">
-                <div class="webappwords">
+                <div class="webappwords reveal fade-right">
                     <h2>Website Applications</h2>
                         <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 </div>
             </div>
             <div class="mobiledev">
                 <img class="mobilegreen reveal fade-left" src="./img/mobilegreen.svg">
-                <div class="mobilewords">
+                <div class="mobilewords reveal fade-left">
                     <h2>Mobile Development</h2>
                     <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
                 </div>
