--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
                 <img class="botgreen" src="./img/botgreen.svg">
             </div>
           </div>
+        <!-- PROJECTS -->
+        <div id="projects">
+            <div class="projectpg">
+                <div class="projtop"></div>
+                <div class="proj1"></div>
+                <div class="proj2"></div>
+                <div class="proj3"></div>
+                <div class="proj4"></div>
+                <div class="proj5"></div>
+                <div class="proj6"></div>
+                <div class="projbot"></div>
+              </div>
+        </div>
          <!-- TEAM -->
          <div id="team">
             <div class="aboutpg">
