adding proj link back and styling projtop

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 <a href="#home"><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"></a>
                 <div class="floatright">
                     <a class="active" href="#home">Home</a>
-                    <!--
                     <a href="#projects">Projects</a>
-                    -->
                     <a href="#team">Team</a>
                     <a href="#contact">Contact</a>
                 </div>
@@ -79,7 +77,7 @@
         <!-- PROJECTS -->
         <div id="projects">
             <div class="projectpg">
-                <div class="projtop"></div>
+                <div class="projtop"><h1>Projects</h1></div>
                 <div class="proj1"></div>
                 <div class="proj2"></div>
                 <div class="proj3"></div>
