adding placeholder img to divs and styling

--- a/index.html
+++ b/index.html
@@ -77,13 +77,27 @@
         <!-- PROJECTS -->
         <div id="projects">
             <div class="projectpg">
-                <div class="projtop"><h1>Projects</h1></div>
-                <div class="proj1"></div>
-                <div class="proj2"></div>
-                <div class="proj3"></div>
-                <div class="proj4"></div>
-                <div class="proj5"></div>
-                <div class="proj6"></div>
+                <div class="projtop">
+                    <h1>Projects</h1>
+                </div>
+                <div class="proj1">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
+                <div class="proj2">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
+                <div class="proj3">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
+                <div class="proj4">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
+                <div class="proj5">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
+                <div class="proj6">
+                    <img class="placeholder" src="./img/placeholder.png">
+                </div>
                 <div class="projbot"></div>
               </div>
         </div>
