adding projppl image

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                 <div class="proj6">
                     <img class="placeholder" src="./img/placeholder.png">
                 </div>
-                <div class="projbot"></div>
+                <div class="projbot">
+                    <img class="projppl" src="./img/projppl.svg"
+                </div>
               </div>
         </div>
          <!-- TEAM -->
