adding link to proj info

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <div class="projinfo">
                         <h2>Project Name</h2></br>
                         <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
                     </div>
                 </div>
                 <div class="proj2">
