--- a/index.html
+++ b/index.html
@@ -90,21 +90,51 @@
                 </div>
                 <div class="proj2">
                     <img class="placeholder" src="./img/placeholder.png">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
                 <div class="proj3">
                     <img class="placeholder" src="./img/placeholder.png">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
                 <div class="proj4">
                     <img class="placeholder" src="./img/placeholder.png">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
                 <div class="proj5">
                     <img class="placeholder" src="./img/placeholder.png">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
                 <div class="proj6">
                     <img class="placeholder" src="./img/placeholder.png">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
                 <div class="projbot">
-                    <img class="projppl" src="./img/projppl.svg"
+                    <img class="projppl" src="./img/projppl.svg">
+                    <div class="projinfo">
+                        <h2>Project Name</h2></br>
+                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
+                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                    </div>
                 </div>
               </div>
         </div>
