--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header>
             <div class="navbar">
                 <a href="#home"><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"></a>
-                <div class="floatright">
+                <div id="floatright">
                     <a class="active" href="#home">Home</a>
                     <!--
                     <a href="#projects">Projects</a>
