adding smtpjs and function

--- a/index.html
+++ b/index.html
@@ -146,10 +146,20 @@
                             >Send</button>
                         </form>
                     </div>
+                    <script src="https://smtpjs.com/v3/smtp.js"></script>
                     <script>
                         function sendEmail(){
-                            let subject = document.getElementById('title');
-                            let message = doocment.getElementById('message')
+                            Email.send({
+                                Host : "smtp.yourisp.com",
+                                Username : "username",
+                                Password : "password",
+                                To : 'them@website.com',
+                                From : "you@isp.com",
+                                Subject : "This is the subject",
+                                Body : "And this is the body"
+                            }).then(
+                            message => alert(message)
+                            );
                         }
                     </script>
                 <div class="contactimg">
