contact  page media queries

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                     </div>
                     <h2>&#9993; development.gf@gmail.com</h2>
                 <div class="contactimg">
-                    <img src="./img/coffee.svg">
-                    <img src="/img/pplsitting.svg">
+                    <img class="coffeepot" src="./img/coffee.svg">
+                    <img class="sittingppl" src="/img/pplsitting.svg">
                 </div>
             </div>
           </div>
