adding background css to svg containers

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="Dan">
                     <div class="svgcontd">
-                        <img src="./img/danpic.svg">
+                        <img class="danphoto" src="./img/danpic.svg">
                     </div>
                     <h2>Daniel</h2>
                     <button class="aboutbtn" onclick="window.open('https://greenervigil.github.io/', '_blank')">View Portfolio</a>
