--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="Text">
                 <h1>Building software solutions to fit your needs</h1>
-                <p>We are a team of Software Engineers and Web Developers who will work with you to solve your companies needs regardless of the technology.</p>
+                <p>We are a team of Software Engineers and Web Developers who will work with you to solve your companies needs with the technologies which best fit your requirements.</p>
             </div>
           </div>
 
@@ -70,7 +70,7 @@
                 <img class="greenwebdev reveal fade-left" src="./img/webdevgreen.svg">
                 <div class="webdevwords reveal fade-left">
                     <h2>Website Development</h2>
-                        <p>We are tech agnostic team passionate about learning technologies we will work with you to determine the right stack solution which best fits.</p>
+                        <p>We are a completely tech agnostic team passionate about learning technologies.  We will work with you to determine the right stack solution which best fits.</p>
                     </div>
             </div>
             <div class="webphoto">
@@ -83,14 +83,14 @@
                 <img class="reveal fade-right"src="./img/webappgreen.svg">
                 <div class="webappwords reveal fade-right">
                     <h2>Website Applications</h2>
-                        <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
+                        <p>We will listen to your needs and together will put together the best solution. We take pride in our abilities to embrace the unknown and work tirelessly to meet your needs.</p>
                 </div>
             </div>
             <div class="mobiledev">
                 <img class="mobilegreen reveal fade-left" src="./img/mobilegreen.svg">
                 <div class="mobilewords reveal fade-left">
                     <h2>Mobile Development</h2>
-                    <p>bard fighter champ monk rogue d20 critical role jeff's cousins are doing a spirito santo at a portuguese place on may 15th - so it's not for a little while.</p>
+                    <p>Looking for a mobile app?  We provide solutions across all major platforms and are willing to work with your team to deterine what will work best for you.</p>
                 </div>
             </div>
             <div class="mobilephoto">
