adding link and description to project div

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     <h1>Projects</h1>
                 </div>
                 <div class="proj1">
-                    <img class="placeholder" src="./img/placeholder.png">
+                    <img class="placeholder" src="./img/GBPProj.PNG">
                     <div class="projinfo">
-                        <h2>Project Name</h2></br>
-                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
-                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                        <h2>Gal's Best Pal</h2></br>
+                        <p>A custom Wordpress theme for a non-profit rescue organization. Greenfield handled both the administrative side of setting up the theme and plugins, as well as creating a seven page custom theme for the organization.</p>
+                        <a href="https://galsbestpal.com/" target="_blank" rel="noreferrer">Gal's Best Pal</a><br/>
                     </div>
                 </div>
                 <div class="proj2">
