creating and setting up thankyou html page

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                 </div>
                 <div class="Hanna">
                     <div class="svgconth">
-                        <img src="./img/hannapic.svg">
+                        <img class="hannaphoto" src="./img/hannapic.svg">
                     </div>
-                    <h2>Hanna</h2>
+                    <h2 >Hanna</h2>
                     <button onclick="window.open('https://hannamlittlefield.github.io/', '_blank')" class="aboutbtn">View Portfolio</a>
                 </div>
             </div>
