--- a/thankyou.html
+++ b/thankyou.html
@@ -24,6 +24,8 @@
             </ul>
         </nav>
     </header>
-    la la la la
+    <div class="thankyou">
+        <img class="thankyouimage" src="./img/thankyoucouple.png">
+    </div>
 </body>
 </html>
