styling thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -26,6 +26,7 @@
     </header>
     <div class="thankyou">
         <img class="thankyouimage" src="./img/thankyoucouple.png">
+        <h1 class="thankyoutext">Thank you! We will be in touch shortly.</h1>
     </div>
 </body>
 </html>
