adding thank you input to contact form

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <h1>Contact Us</h1>
             <div class="contactform">
                 <form action="https://formsubmit.co/development.gf@gmail.com" method="POST">
+                    <input type="hidden" name="_next" value="https://greenfield-org.github.io/thankyou.html">
                     <label for="name">Name</label><br>
                     <input type="text" id="name" name="name"><br>
                     <label for="email">Email</label><br>
