adding ultra crew app to project page

--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
                     </div>
                 </div>
                 <div class="proj2">
-                    <img class="placeholder" src="./img/placeholder.png">
+                    <img class="placeholder" src="./img/UltraCrewApp.PNG">
                     <div class="projinfo">
-                        <h2>Project Name</h2></br>
-                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
-                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                        <h2>Ultra Crew App</h2></br>
+                        <p>A mobile application built in React Native that is used to track ultramarathon athletes during their races. This app uses an API layer to keep track of data, track calories, and overall race results. A link to download will be added once the MVP is fully completed.</p>
                     </div>
                 </div>
                 <div class="proj3">
