cleaning up styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="container" id="home">
+        <div class="container">
             <div class="Photo">
                 <img class="homeimage" src="img/homepage.PNG">
             </div>
